Fixes silly overflow thing in left navmenu.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -151,6 +151,10 @@ body {
   }
 }
 
+.nobar {
+  overflow: hidden;
+}
+
 .search-filter {
   color: $charcoal;
   margin-bottom: 5px;
